[gd_scene load_steps=35 format=2]

[ext_resource path="res://Heritage/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Import/Graph/Actor/PNG/Spirite.png" type="Texture" id=2]
[ext_resource path="res://Shaders/Hurt.gdshader" type="Shader" id=3]
[ext_resource path="res://Scene/Spirit/Spirit.gd" type="Script" id=4]
[ext_resource path="res://Son/zombi_fantome.ogg" type="AudioStream" id=5]
[ext_resource path="res://Son/whistle.ogg" type="AudioStream" id=6]
[ext_resource path="res://Son/zombi_hound_ fantome_mort.ogg" type="AudioStream" id=7]

[sub_resource type="ShaderMaterial" id=26]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/opacity = 0.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 192, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 240, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 288, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 336, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 192, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 240, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 288, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 336, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 384, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 48, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 96, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 144, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 192, 192, 48, 48 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Move",
"speed": 4.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "Spawn",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), null ],
"loop": false,
"name": "Die",
"speed": 4.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 13 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "Attack",
"speed": 4.0
} ]

[sub_resource type="CircleShape2D" id=28]
radius = 30.0

[node name="Spirit" groups=["ENEMIES"] instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 16
script = ExtResource( 4 )
speed = 80
max_HP = 1
current_HP = 1

[node name="Spawn_point" type="Node2D" parent="." index="0"]
position = Vector2( 23, -20 )

[node name="Spawn_point2" type="Node2D" parent="." index="1"]
position = Vector2( 26, 15 )

[node name="AnimatedSprite" parent="." index="3"]
material = SubResource( 26 )
frames = SubResource( 25 )
animation = "Attack"
frame = 6

[node name="SelfHitBox" parent="." index="4"]
position = Vector2( -2, 2 )
rotation = 1.5708

[node name="Die" type="AudioStreamPlayer2D" parent="SoundBox" index="0"]
stream = ExtResource( 7 )
volume_db = 10.0
pitch_scale = 0.5
max_distance = 500.0

[node name="Attack" type="AudioStreamPlayer2D" parent="SoundBox" index="1"]
stream = ExtResource( 6 )
max_distance = 300.0

[node name="Move" type="AudioStreamPlayer2D" parent="SoundBox" index="2"]
stream = ExtResource( 5 )
volume_db = 15.0
max_distance = 500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/AttackArea" index="0"]
shape = SubResource( 28 )
